# fraud

./: README.md  package-lock.json
computemodule/: Cargo.toml  Dockerfile
computemodule/src/: main.rs
osdk-client/: .env.development  .env.production  .npmrc  README.md  foundry.config.json  package-lock.json  package.json  vite.config.ts
osdk-client/src/: Home.module.css  Home.tsx  ImageDrop.tsx  Layout.tsx  client.ts  utilFuncs.ts
