[package]
name = "computemodule"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.9"
forgery-detection-zero = "0.3.0"
image = "0.24.9" 
base64 = "0.22.1"
